# SB-AI-DEV

./: .gitignore  GetJupyterServer.py  Python For Finance Portfolio Optimization.ipynb  README.md  Untitled.ipynb  linalg_vectors.ipynb
.devcontainer/: devcontainer.json
.virtual_documents/: Python For Finance Portfolio Optimization.ipynb.py  Salary Predictor.ipynb.py
AI/ML/OpenCV/: .output.avi.icloud  1_ReadImage.py
Books/SUBHASISH BISWAS/: Machine Learning.gdoc
DL/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
DL/CNN/ChatGPT/: 1-TransferLearning.ipynb
DL/Coursera/Generative AI and LLMs-Architecture and Data Preparation/: Exploring_Generative_AI_Libraries_.ipynb  Implementing_Tokenization_and_Sequencing.ipynb
DL/Neural_Network/: SB_Matrix.js  Understanding.txt  sketch.js
DL/Perceptron/: SB_Perceptron.js
GEN-AI/Udemy/Eden Marco/LangChain/: 1-Search-Agents.ipynb  2-ReActAgentBasics.ipynb  Kite.ipynb  Pipfile  com.cloudflared.tunnel.plist  main.py  pyproject.toml
GEN-AI/Udemy/Eden Marco/LangChain/ice_breaker/: Pipfile  ice_breaker.py
JupyterCommand/: requirements.txt
ML/Colab Notebooks/: Copy of Understanding Financial Data.ipynb  FirstCoLab.ipynb  LineaRegression_With_EDA.ipynb  Mounting Google Drive.ipynb  RestoreAdventureWorkDatabaseCmd.sql
ML/OpenCV/: 2_CaptureVideo.py  3_WiringGeoMetricShape.py
ML/SB/: LineaRegression_With_EDA.ipynb  LogisticRegression.ipynb
ML/Test/: MyFile.py  Test.ipynb  test.ipynb.amltmp
RESOURCE/JupyterCommand/: JupyterCommands.txt
RESOURCE/Pacakges/: requirements.txt
(+1750 files in other folders)
